src/test/ui-fulldeps/custom-derive/issue-36935.stderr
error: proc-macro derive panicked
  --> $DIR/issue-36935.rs:18:15
   |
LL | #[derive(Foo, Bar)] //~ ERROR proc-macro derive panicked
   |               ^^^
   |
   = help: message: lolnope

